fix join nil container wrap

--- a/site/src/components/pages/About/JoinNil/JoinNil.module.scss
+++ b/site/src/components/pages/About/JoinNil/JoinNil.module.scss
@@ -7,7 +7,6 @@
   position: relative;
   display: flex;
   align-items: flex-start;
-  flex-wrap: wrap;
   width: 100%;
 
   @include mobile {
